= 3.68.0 (2023-05-11)

* Make Roda.run in multi_run plugin accept blocks to allow autoloading the apps to dispatch to (jeremyevans)

= 3.67.0 (2023-04-12)

* Add custom_block_results plugin for registering custom block result handlers (jeremyevans)

= 3.66.0 (2023-03-13)

* Support overriding exception page assets via exception_page_{css,js} instance methods (jeremyevans) (#306)

* Avoid keeping reference to Roda instance that caches an inline template (jeremyevans)

* Add render_coverage plugin, using tilt 2.1 features to allow for compiled templates in Ruby <3.2 (jeremyevans)

= 3.65.0 (2023-02-13)

* Make indifferent_params plugin work with changes in rack main branch (jeremyevans)

* Add autoload_named_routes plugin for autoloading file for a named route when there is a request for that route (jeremyevans)

* Make path method in path plugin accept class name string/symbol with :class_name option to register classes without forcing autoloads (jeremyevans)

= 3.64.0 (2023-01-12)

* Automatically expand paths for autoload_hash_branches files, so that relative paths work (jeremyevans)

* Make autoload_hash_branches plugin eagerly load the branches when freezing the application (jeremyevans)

* Add erb_h plugin for faster (if slightly less safe) html escaping using erb/escape (jeremyevans)

= 3.63.0 (2022-12-16)

* Make mailer plugin set configured content type for body part for emails with attachments when using mail 2.8+ (jeremyevans)

* Add autoload_hash_branches plugin for autoloading file for a hash branch when there is a request for that branch (jeremyevans)

* Add mailer plugin :terminal option to make r.mail use a terminal match when provided arguments (jeremyevans)

= 3.62.0 (2022-11-14)

* Add typecast_params_sized_integers plugin for converting parameters to sized integers (jeremyevans)

* Add Integer_matcher_max plugin for setting maximum integer value matched by the Integer matcher (jeremyevans)
